--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>HumanMint</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,10 +21,10 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>HumanMint</h1>
+							<p>what the fuck is up mothafuckas</p>
 						</header>
-						<!--
+						
 						<hr />
 						<h2>Extra Stuff!</h2>
 						<form method="post" action="#">
@@ -60,7 +60,7 @@
 							</ul>
 						</form>
 						<hr />
-						-->
+						
 						<footer>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
