--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						
 						<footer>
 							<ul class="icons">
-								<li><a href="twitch.tv/HumanMint_" class="icon brands fa-twitch">Twitch</a></li>
+								<li><a href="twitch" class="icon brands fa-twitch">Twitch</a></li>
 								<li><a href="#" class="icon brands fa-youtube">YouTube</a></li>
 								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
 							</ul>
