--- a/twitch/index.html
+++ b/twitch/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HumanMint's Twitch</title>
-      <meta http-equiv = "refresh" content = "2; url = twitch.tv/HumanMint_" />
+      <meta http-equiv = "refresh" content = "2; url = https://www.twitch.tv/HumanMint_" />
    </head>
    <body>
       <p>Fuck you HTML5!</p>
