--- a/twitch/index.html
+++ b/twitch/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "2; url = https://www.twitch.tv/HumanMint_" />
    </head>
    <body>
-      <p>Fuck you HTML5!</p>
+      <p>Redirecting...</p>
    </body>
 </html>
