--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://www.twitch.tv/HumanMint_" class="icon brands fa-twitch">Twitch</a></li>
-								<li><a href="#" class="icon brands fa-youtube">YouTube</a></li>
-								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
+								<li><a href="https://www.youtube.com/c/HumanMintTV" class="icon brands fa-youtube">YouTube</a></li>
+								<li><a href="https://www.twitter.com/HumanMint_" class="icon brands fa-twitter">Twitter</a></li>
 							</ul>
 						</footer>
 					</section>
