--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	Identity by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+	modified so shittily by HumanMint at 3 AM what am i doing
 -->
 <html>
 	<head>
