fix dumbass url

--- a/twitter/index.html
+++ b/twitter/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HumanMint's Twitter</title>
-      <meta http-equiv = "refresh" content = "0; url = https://www.twitter/HumanMint_" />
+      <meta http-equiv = "refresh" content = "0; url = https://www.twitter.com/HumanMint_" />
    </head>
    <body>
       <p>Redirecting...</p>
