--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
 	modified so shittily by HumanMint at 3 AM what am i doing
+
+	i need an actual web developer ngl
 -->
 <html>
 	<head>
