--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="https://www.twitch.tv/HumanMint_" class="icon brands fa-twitch">Twitch</a></li>
 								<li><a href="https://www.youtube.com/c/HumanMintTV" class="icon brands fa-youtube">YouTube</a></li>
 								<li><a href="https://www.twitter.com/HumanMint_" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="https://steamcommunity.com/id/humanmint/" class="icon brands fa-youtube">Steam test</a></li>
+								<li><a href="https://steamcommunity.com/id/humanmint/" class="icon brands fa-steam">Steam test</a></li>
 							</ul>
 						</footer>
 					</section>
