--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>HumanMint</h1>
-							<p>what the fuck is up mothafuckas</p>
+							<p>This website is currently in development. Have some patience nerd.</p>
 						</header>
 						
 						<footer>
