--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 								<li><a href="https://www.youtube.com/c/HumanMintTV" class="icon brands fa-youtube">YouTube</a></li>
 								<li><a href="https://www.twitter.com/HumanMint_" class="icon brands fa-twitter">Twitter</a></li>
 								<li><a href="https://steamcommunity.com/id/humanmint/" class="icon brands fa-steam">Steam test</a></li>
+								<li><a href="https://github.com/HumanMint/" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
