--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; HumanMint</li><!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>> -->
+							<li>&copy; HumanMint</li> <li>Stolen from: <a href="http://html5up.net">HTML5 UP</a></li>>
 						</ul>
 					</footer>
 
