--- a/test/left-sidebar.html
+++ b/test/left-sidebar.html
@@ -28,18 +28,19 @@
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">My links</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="https://www.twitch.tv/HumanMint_">Twitch</a></li>
+											<li><a href="https://www.youtube.com/c/HumanMintTV">YouTube</a></li>
+											<li><a href="https://www.twitter.com/HumanMint_">Twitter</a></li>
+											<li><a href="https://www.github.com/HumanMint">GitHub</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="resume.html">Resume</a></li>
+							<!-- I WANT TO MAKE THIS BUTTON PLAY THE BRUH SOUND -->
+							<li><a href="#" class="button primary">bruh</a></li>
 						</ul>
 					</nav>
 				</header>
