--- a/test/index.html
+++ b/test/index.html
@@ -92,11 +92,7 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>text 1 = Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>text 1 = Bwandit owci powttitow sempew. Awcu phasewwus towtow enyim mi nyisi pwaesent dowow adipiscing. Integew mi sed nyascetuw cep awiquet augue vawius tempus wobowtis powttitow accumsan consequat adipiscing wowem dowow.</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>text 2 = Morbi enim nascetur et placerat lorem sed iaculis neque ante
