--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>HumanMint</h1>
-							<p>This website is currently in development. Contact me in any of the social media below.</p>
+							<p>This website is currently in development.</p>
 						</header>
 						
 						<footer>
