--- a/test/index.html
+++ b/test/index.html
@@ -92,7 +92,7 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>text 1 = Bwandit owci powttitow sempew. Awcu phasewwus towtow enyim mi nyisi pwaesent dowow adipiscing. Integew mi sed nyascetuw cep awiquet augue vawius tempus wobowtis powttitow accumsan consequat adipiscing wowem dowow.</p>
+									<p>Yo what the fuss is up ya buttacups its ya boi skinny pencil back at it again with another call of duty gameplay</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>text 2 = Morbi enim nascetur et placerat lorem sed iaculis neque ante
