--- a/index.html
+++ b/index.html
@@ -4,22 +4,12 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
-	modified so shittily by HumanMint at 3 AM what am i doing
+	modified so badly by HumanMint at 3 AM what am i doing
 
 	i need an actual web developer ngl
 -->
 <html>
 	<head>
-			<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150921907-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'UA-150921907-1');
-		</script>
-
 		<title>HumanMint</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
