--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>HumanMint Test</title>
+		<title>Daniel Park Test</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -60,9 +60,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Welcome to HumanMint's website</h2>
-							<p>I genuinely don't know what to put here :)</p>.<br />
-							OMEGALUL</p>
+							<h2>Welcome to Daniel's Website Test :)</h2>
+							<p>Copy pasted from a template so don't assume I'm amazing at this</p>.<br />
+							</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -77,12 +77,12 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Test Header Text 1 Wow</h2>
+										<p>yayayayaya wow this is cool</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Yo what the fuss is up ya buttacups its ya boi skinny pencil back at it again with another call of duty gameplay</p>
+									<p>Yo what the fuss is up ya buttacups its ya boi purple man back at it again with another call of duty gameplay</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>text 2 = Morbi enim nascetur et placerat lorem sed iaculis neque ante
