--- a/cit/index.html
+++ b/cit/index.html
@@ -6,7 +6,8 @@
 	</head>
 
 	<body>
-		<h1>Heading 1 yay</h1>
+		<h1>Hello yes welcome to the worst website of all time</h1>
+		<p>This is some text that I put over here, don't you love it? It's like... normal text but like.. in a website dude. Oh my god how exciting</p>
 	</body>
 
 </html>
