--- a/cit/index.html
+++ b/cit/index.html
@@ -5,9 +5,14 @@
 		<title>Wow sick title hehe</title>
 	</head>
 
-	<body>
-		<h1>Hello yes welcome to the worst website of all time</h1>
-		<p>This is some text that I put over here, don't you love it? It's like... normal text but like.. in a website dude. Oh my god how exciting</p>
+	<body style="background-color:Tomato;">
+		<h1>Tomatoes</h1>
+
+
+		<h2>Tomatoes are great. They are red, round, juicy, and definitely not apples.</h2>
+
+		<p>We never talk about those damn apples. Apples are gross, apples are lame, apples are useless, the only reason why they're relevant is because stupid newton discovered gravity because of a dumb apple.</p>
+		
 	</body>
 
 </html>
