--- a/cit/index.html
+++ b/cit/index.html
@@ -2,16 +2,29 @@
 <html>
 
 	<head>
-		<title>Wow sick title hehe</title>
+		<title>Tomatoes RULE</title>
 	</head>
 
 	<body style="background-color:Tomato;">
-		<h1>Tomatoes</h1>
+		<h1 style="color:White;">Tomatoes</h1>
 
 
 		<h2>Tomatoes are great. They are red, round, juicy, and definitely not apples.</h2>
 
 		<p>We never talk about those damn apples. Apples are gross, apples are lame, apples are useless, the only reason why they're relevant is because stupid newton discovered gravity because of a dumb apple.</p>
+
+		<h2>Here is an example of a tomato</h2>
+		<img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="John the tomato" width="782" height="532">
+
+		<h2>Feast your eyes, because this is one of those terrible apples</h2>
+		<img src="https://images-na.ssl-images-amazon.com/images/I/918YNa3bAaL._SL1500_.jpg" alt="Disgusting apple" width="500" height="500">
+
+		<h2 style="color:White;">LOOK HOW MUCH BETTER IS A NORMAL TOMATO</h2>
+		<p>Just look at those weird stripes, those terrible looking colors, that dumb stem piercing up the top, ew absolutely disgusting.</p>
+
+
+		
+		
 		
 	</body>
 
