--- a/cit/index.html
+++ b/cit/index.html
@@ -3,23 +3,54 @@
 
 	<head>
 		<title>Tomatoes RULE</title>
+		<style>
+			h1 {
+				font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+				color: White;
+				font-size: 72px;
+			}
+
+			h2 {
+				font-family: Arial, Helvetica, sans-serif;
+				color: Black;
+				font-size: 24px;
+			}
+
+			p {
+				font-family: Arial, Helvetica, sans-serif;
+				color: Black;
+
+			}
+
+			table {
+				font-family: arial, sans-serif;
+				border-collapse: collapse;
+				width: 100%
+			}
+
+			td, th {
+				border: lpx solid #dddddd;
+				text-align: left;
+				padding: 8px;
+			}
+		</style>
 	</head>
 
 	<body style="background-color:Tomato;">
-		<h1 style="color:White;">Tomatoes</h1>
+		<h1>Tomatoes</h1>
 
 
 		<h2>Tomatoes are great. They are red, round, juicy, and definitely not apples.</h2>
 
-		<p>We never talk about those damn apples. Apples are gross, apples are lame, apples are useless, the only reason why they're relevant is because stupid newton discovered gravity because of a dumb apple.</p>
+		<p>We never talk about those damn apples. Apples are gross, apples are lame, apples are useless. The only reason why they're relevant is because stupid Newton discovered gravity because of a dumb apple.</p>
 
 		<h2>Here is an example of a tomato</h2>
-		<img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="John the tomato" width="782" height="532">
+		<img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="John the tomato" width="582" height="392">
 
-		<h2>Feast your eyes, because this is one of those terrible apples</h2>
-		<img src="https://images-na.ssl-images-amazon.com/images/I/918YNa3bAaL._SL1500_.jpg" alt="Disgusting apple" width="500" height="500">
+		<h2>Here is an example of a stupid apple</h2>
+		<img src="https://images-na.ssl-images-amazon.com/images/I/918YNa3bAaL._SL1500_.jpg" alt="Disgusting apple" width="500" height="450">
 
-		<h2 style="color:White;">LOOK HOW MUCH BETTER IS A NORMAL TOMATO</h2>
+		<h2 style="color:White;">LOOK HOW MUCH BETTER A NORMAL TOMATO IS</h2>
 		<p>Just look at those weird stripes, those terrible looking colors, that dumb stem piercing up the top, ew absolutely disgusting.</p>
 
 
