the grand deployment of food

--- a/cit/index.html
+++ b/cit/index.html
@@ -2,12 +2,13 @@
 <html>
 
 	<head>
-		<title>Tomatoes RULE</title>
+		<title>Main Home</title>
 		<style>
 			h1 {
-				font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+				font-family: 'Times New Roman', Times, serif;
 				color: White;
 				font-size: 72px;
+                text-align: center;
 			}
 
 			h2 {
@@ -36,27 +37,25 @@
 		</style>
 	</head>
 
-	<body style="background-color:Tomato;">
-		<h1>Tomatoes</h1>
+	<body style="background-color:sandybrown;">
+
+		<h1>Main Home</h1>
 
 
-		<h2>Tomatoes are great. They are red, round, juicy, and definitely not apples.</h2>
+        <h2>Click on your desired food link</h2>
+        
+        <a href="tomato.html">
+            <img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="CLICK HERE FOR TOMATO" width="620" height="450">
+        </a>
 
-		<p>We never talk about those damn apples. Apples are gross, apples are lame, apples are useless. The only reason why they're relevant is because stupid Newton discovered gravity because of a dumb apple.</p>
+        <a href="apple.html">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/918YNa3bAaL._SL1500_.jpg" alt="CLICK HERE FOR APPLE" width="500" height="450">
+        </a>
 
-		<h2>Here is an example of a tomato</h2>
-		<img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="John the tomato" width="582" height="392">
-
-		<h2>Here is an example of a stupid apple</h2>
-		<img src="https://images-na.ssl-images-amazon.com/images/I/918YNa3bAaL._SL1500_.jpg" alt="Disgusting apple" width="500" height="450">
-
-		<h2 style="color:White;">LOOK HOW MUCH BETTER A NORMAL TOMATO IS</h2>
-		<p>Just look at those weird stripes, those terrible looking colors, that dumb stem piercing up the top, ew absolutely disgusting.</p>
-
-
-		
-		
-		
+        <a href="banana.html">
+            <img src="https://thumbs-prod.si-cdn.com/GQWa1qJUrzp6l27gnhxhwMAtkpI=/fit-in/1600x0/https://public-media.si-cdn.com/filer/d5/24/d5243019-e0fc-4b3c-8cdb-48e22f38bff2/istock-183380744.jpg" alt="CLICK HERE FOR BANANA" width="600" height="450">
+        </a>
+        
 	</body>
 
 </html>
