--- a/cit/banana.html
+++ b/cit/banana.html
@@ -17,7 +17,7 @@
 			}
 
 			p {
-				font-family: Arial, Helvetica, sans-serif;
+				font-family: Verdana, Geneva, Tahoma, sans-serif;
 				color: Black;
 
 			}
