--- a/cit/index.html
+++ b/cit/index.html
@@ -55,7 +55,11 @@
         <a href="banana.html">
             <img src="https://thumbs-prod.si-cdn.com/GQWa1qJUrzp6l27gnhxhwMAtkpI=/fit-in/1600x0/https://public-media.si-cdn.com/filer/d5/24/d5243019-e0fc-4b3c-8cdb-48e22f38bff2/istock-183380744.jpg" alt="CLICK HERE FOR BANANA" width="600" height="450">
         </a>
-        
+
+        <h2>Oh and if you're looking for the boring assignment page..</h2>
+        <a href="assignment.html">
+            <p>Click here...</p>
+        </a>
 	</body>
 
 </html>
