--- a/cit/index.html
+++ b/cit/index.html
@@ -39,7 +39,8 @@
 
 	<body style="background-color:sandybrown;">
 
-		<h1>Main Home</h1>
+        <h1>Daniel Park's Food Home</h1>
+        <p>Welcome, here you have a selection of different webpages you can go through!</p>
 
 
         <h2>Click on your desired food link</h2>
