--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>HumanMint</h1>
-							<p>This website is currently in development.</p>
+							<p><a href="https://imaginereadingman.ga">Visit my stupid blog</a></p>
 						</header>
 						
 						<footer>
