--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>HumanMint</h1>
 							<p>hey :)</p>
-							<iframe src='https://frik.club/view/0346cda6-3319-4c9e-ac37-eb7173c4a673/?embedded=True' width=600 height=345></iframe>
+							<iframe src='https://frik.club/view/0346cda6-3319-4c9e-ac37-eb7173c4a673/?embedded=True'></iframe>
 						</header>
 						
 						<footer>
