--- a/cit/apple.html
+++ b/cit/apple.html
@@ -37,7 +37,7 @@
 		<img src="https://images-na.ssl-images-amazon.com/images/I/918YNa3bAaL._SL1500_.jpg" alt="Alvin the apple" width="500" height="450">
 
 		<h2>Here is an example of a dumb tomato</h2>
-        <img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="Disgusting tomato" width="582" height="392">
+        <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/26200/tomato-clipart-xl.png" alt="Disgusting tomato" width="582" height="392">
 
 		<h2>Don't even get me started on pies.</h2>
         <p>Who wants a tomato pie. Ew. Get a good apple pie.</p>
