--- a/cit/index.html
+++ b/cit/index.html
@@ -46,7 +46,7 @@
         <h2>Click on your desired food link</h2>
         
         <a href="tomato.html">
-            <img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="CLICK HERE FOR TOMATO" width="620" height="450">
+            <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/26200/tomato-clipart-xl.png" alt="CLICK HERE FOR TOMATO" width="620" height="450">
         </a>
 
         <a href="apple.html">
