--- a/cit/tomato.html
+++ b/cit/tomato.html
@@ -34,7 +34,7 @@
 		<p>We never talk about those damn apples. Apples are gross, apples are lame, apples are useless. The only reason why they're relevant is because stupid Newton discovered gravity because of a dumb apple.</p>
 
 		<h2>Here is an example of a tomato</h2>
-		<img src="https://boygeniusreport.files.wordpress.com/2019/05/capture-2.png" alt="John the tomato" width="582" height="392">
+		<img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/26200/tomato-clipart-xl.png" alt="John the tomato" width="582" height="392">
 
 		<h2>Here is an example of a stupid apple</h2>
 		<img src="https://images-na.ssl-images-amazon.com/images/I/918YNa3bAaL._SL1500_.jpg" alt="Disgusting apple" width="500" height="450">
